src/test/deca/context/valid/test_context_correct_2.deca
// Description :
// on déclare les classes A,B et C des classe avec la hiérarchie C hérite de B et B hérite de A. On déclare une variable de type C et on essaie d'appeler le champ x (de A) avec cette variable.
//
// Résultats :
// ok


  class A {
  	int x;
  	
  }
  
  class B extends A {
  
  }
  
  class C extends B {
  	int y ;
  	
  }
  
  class D {
  }
  {
  C f;
  int z;
  f.x = z;
  }

